--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   hive_flutter: ^1.1.0
   # dependensi session
   shared_preferences: ^2.5.3
+  # dependensi buat API
+  http: ^1.6.0
+  provider: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
